--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+/.idea/modules.xml
+/.idea/ase-2021.iml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
